fix(identitystore): validate update attribute paths